--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>Online Calculator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="display">1234567890</div>
+        <div class="row">
+            <button id="AC">AC</button>
+            <button id="division">/</button>
+        </div>
+        <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button id="multiplication">*</button>
+        </div>
+        <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button id="subtraction">-</button>
+        </div>
+        <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button id="addition">+</button>
+        </div>
+        <div class="row">
+            <button class="number" id="zero">0</button>
+            <button id="decimal">.</button>
+            <button id="equals">=</button>
+        </div>
+    </div>
 </body>
 </html>
