Add delete button and stylize

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="display">0</div>
         <div class="row">
             <button id="AC">AC</button>
+            <button id="delete">del</button>
             <button class="operator">/</button>
         </div>
         <div class="row">
