--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row">
             <button id="AC">AC</button>
             <button id="delete">del</button>
-            <button class="operator">/</button>
+            <button class="operator" id="division">/</button>
         </div>
         <div class="row">
             <button class="number">7</button>
